# Noon

./: .gitignore  README.md  install.sh  nvidia_packages.txt  packages.txt  setup.sh  setup_nvidia.sh
dots/.config/: dolphinrc  kdeglobals
dots/.config/Kvantum/MaterialAdw/: MaterialAdw.kvconfig
dots/.config/VSCodium/User/: settings.json
dots/.config/btop/: btop.conf
dots/.config/btop/themes/: noon.theme
dots/.config/easyeffects/db/: bassLoudnessrc  crystalizerrc  easyeffectsrc  exciterrc  expanderrc  graphrc  rnnoiserc
dots/.config/fish/: config.fish
dots/.config/fish/functions/: aurpush.fish  refresh_libs.fish  update_libs.fish
dots/.config/foot/: foot.ini
dots/.config/gowall/: config.yml
dots/.config/hypr/: hyprland.conf  hyprlock.conf
dots/.config/kde-material-you-colors/: config.conf
dots/.config/kitty/: kitty.conf
dots/.config/matugen/: config.toml
dots/.config/matugen/scripts/: spiceitfy_theme_apply.sh
dots/.config/matugen/templates/: colors.json  sddm.conf
dots/.config/matugen/templates/applications/: firefox.json  midnight-discord.css  onlyoffice.json  pywalfox-colors.json  (+4 more)
dots/.config/niri/: config.kdl
dots/.config/noon/: .qmlls.ini  AiIPC.qml  CMakeLists.txt  GlobalIPC.qml  IPC.qml  shell.qml
dots/.config/noon/common/: Animations.qml  Colors.qml  ColorsService.qml  Directories.qml  Fonts.qml  GlobalStates.qml  MColors.qml  Mem.qml  MonitorsInfo.qml  Noon.qml  NoonUtils.qml  Padding.qml  Rounding.qml  Sizes.qml
dots/.config/noon/hypr/: animations.conf  binds.conf  colors.conf  constants.conf  dwindle.conf  env.conf  execs.conf  general.conf  layout.conf  monitors.conf  nvidia_env.conf  plugins.conf  qs_binds.conf  rules.conf  scrolling.conf  variables.conf
dots/.config/noon/hyprland/: animations.conf  env.conf  execs.conf  general.conf  keybinds.conf  laptop.conf  plugins.conf  qs_keybinds.conf  rules.conf  scrolling.conf  variables.conf
dots/.config/noon/plugins/: CMakeLists.txt
dots/.config/noon/plugins/services/: addblocker.cpp  addblocker.h  clipboard.cpp  clipboard.h  latex.cpp  latex.h
dots/.config/noon/plugins/utils/: CMakeLists.txt
dots/.config/noon/plugins/widgets/: cava_watcher.cpp  cava_watcher.h  highlighter.cpp
dots/.config/noon/scripts/: alarm_service.py  ansi_to_m3.py  appearance_service.py  beats_daemon.py  bookmarks_service.py  build_metadata.py  clean_music_names.py  coverart_service.py  create_depth_image_rembg.py  create_playlist.sh  dlpHelper.sh  duplicates_remover.py  games_service.py  gcalendar_service.py  get_bookmarks.py  get_cursors.sh  gtasks_sync.py  hits_service.py  icons_service.py  metadata_helper.sh  network_service.py  oauth_manager.py  oauth_service.py  plugins_helper.sh  power_service.sh  pyquickshare_service.py  quotes_service.sh  record_service.sh  rename_mp3_to_title.py  requirements.txt  resources_service.py  set_face.sh  stt.py  thumbnails_service.py  tlp_service.sh  to_m3_camel_case.py  tts.py  tts_daemon.py  ws_service.sh
dots/.config/noon/services/: Ai.qml  AiMessageData.qml  AlarmService.qml  AmbientSoundsService.qml  AppSearch.qml  Audio.qml  AudioService.qml  AuthManager.qml  AzkarService.qml  BacklightService.qml  Battery.qml  BatteryService.qml  BeatsHitsService.qml  BeatsService.qml  BluetoothService.qml  Brightness.qml  BrightnessService.qml  CalendarService.qml  ClipboardService.qml  Cliphist.qml  ColorsService.qml  Compositor.qml  CursorsService.qml  DateTime.qml  DateTimeService.qml  DialogsService.qml  DictService.qml  DownloadService.qml  Emojis.qml  EmojisService.qml  FindService.qml  FirefoxBookmarksService.qml  FirstRunExperience.qml  GameLauncherService.qml  GamesMetadataService.qml  GowallService.qml  GreetdService.qml  HyprlandData.qml  HyprlandKeybinds.qml  HyprlandParserService.qml  (+48 more)
dots/.config/noon/store/: AiStore.qml  BarData.qml  BeamData.qml  BeatsSchema.qml  ColorsSchema.qml  EmojisStore.qml  LauncherData.qml  MColors.qml  OAuthSchema.qml  OptionsSchema.qml  PosesSchema.qml  SettingsData.qml  SidebarData.qml  StatesSchema.qml  StoreSchema.qml  ThemeData.qml  ThemeStore.qml  TimersSchema.qml  TodoSchema.qml  TweaksData.qml  WidgetsData.qml  WorkspaceLabelManager.qml
dots/.config/qt6ct/: qt6ct.conf
dots/.config/qt6ct/colors/: matugen.conf
dots/.config/spicetify/: config-xpui.ini
dots/.config/zed/: settings.json  settings_backup.json
dots/.config/zed/themes/: m3colors.json  noon.json
dots/.vscode-oss/extensions/noon/: colors.json  package.json
sddm/: Main.qml  metadata.desktop  theme.conf
setup_data/: global_services.txt  greeter_asci.txt  nvidia_packages.txt  nvidia_services.txt  optional_packages.txt  packages.txt  terminal_sequences.txt
(+1221 files in other folders)
